--- a/docker/elastic/compose3/.env
+++ b/docker/elastic/compose3/.env
@@ -11,7 +11,7 @@ ELASTIC_PASSWORD=kb_112233
 
 # Password for the 'kibana_system' user (at least 6 characters)
 KIBANA_PASSWORD=kb_112233
-
+ES_HEAP_SIZE=-16g
 
 # Version of Elastic products
 STACK_VERSION=8.9.1
@@ -35,8 +35,8 @@ KIBANA_PORT=5601
 
 
 # Increase or decrease based on the available host memory (in bytes)
-ES_MEM_LIMIT=4294967296
-KB_MEM_LIMIT=1073741824
+ES_MEM_LIMIT=34359738368
+KB_MEM_LIMIT=4294967296
 LS_MEM_LIMIT=2147483648
 
 
