--- a/docker/elastic/compose3/docker-compose.yml
+++ b/docker/elastic/compose3/docker-compose.yml
@@ -97,6 +97,7 @@ services:
       - xpack.security.transport.ssl.certificate_authorities=certs/ca/ca.crt
       - xpack.security.transport.ssl.verification_mode=certificate
       - xpack.license.self_generated.type=${LICENSE}
+      - "ES_JAVA_OPTS=-Xms${ES_HEAP_SIZE} -Xmx${ES_HEAP_SIZE}"
     mem_limit: ${ES_MEM_LIMIT}
     ulimits:
       memlock:
@@ -178,6 +179,7 @@ services:
       - xpack.security.transport.ssl.certificate_authorities=certs/ca/ca.crt
       - xpack.security.transport.ssl.verification_mode=certificate
       - xpack.license.self_generated.type=${LICENSE}
+      - "ES_JAVA_OPTS=-Xms${ES_HEAP_SIZE} -Xmx${ES_HEAP_SIZE}"
     mem_limit: ${ES_MEM_LIMIT}
     ulimits:
       memlock:
