--- a/docker/elastic/compose3/docker-compose.yml
+++ b/docker/elastic/compose3/docker-compose.yml
@@ -46,7 +46,7 @@ services:
           "    ip:\n"\
           "      - 127.0.0.1\n"\
           > config/certs/instances.yml;
-          bin/elasticsearch-certutil cert --silent --pem -out config/certs/certs.zip --ca-cert config/certs/ca/ca.crt --ca-key config/certs/ca/ca.key;
+          bin/elasticsearch-certutil cert --silent --pem -out config/certs/certs.zip --in config/certs/instances.yml --ca-cert config/certs/ca/ca.crt --ca-key config/certs/ca/ca.key;
           unzip config/certs/certs.zip -d config/certs;
         fi;
         cp config/certs/ca/ca.crt /shared_folder/ca.crt
