--- a/docker/elastic/compose11/docker-compose.yml
+++ b/docker/elastic/compose11/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
     volumes:
       - certs:/usr/share/elasticsearch/config/certs
+      - ./instances-cert.yml:/usr/share/elasticsearch/config/certs/instances.yml
       - type: bind
         source: ./shared_folder
         target: /shared_folder
@@ -25,31 +26,10 @@ services:
         fi;
         if [ ! -f certs/certs.zip ]; then
           echo "Creating certs";
-          echo -ne \
-          "instances:\n"\
-          "  - name: es01\n"\
-          "    dns:\n"\
-          "      - es01\n"\
-          "      - localhost\n"\
-          "    ip:\n"\
-          "      - 127.0.0.1\n"\
-          "  - name: es02\n"\
-          "    dns:\n"\
-          "      - es02\n"\
-          "      - localhost\n"\
-          "    ip:\n"\
-          "      - 127.0.0.1\n"\
-          "  - name: es03\n"\
-          "    dns:\n"\
-          "      - es03\n"\
-          "      - localhost\n"\
-          "    ip:\n"\
-          "      - 127.0.0.1\n"\
-          > config/certs/instances.yml;
           bin/elasticsearch-certutil cert --silent --pem -out config/certs/certs.zip --in config/certs/instances.yml --ca-cert config/certs/ca/ca.crt --ca-key config/certs/ca/ca.key;
           unzip config/certs/certs.zip -d config/certs;
         fi;
-        cp config/certs/ca/ca.crt /shared_folder/ca.crt
+        cp config/certs/ca/ca.crt /shared_folder/ca3.crt
         echo "Setting file permissions"
         chown -R root:root config/certs;
         find . -type d -exec chmod 750 \{\} \;;
@@ -222,6 +202,8 @@ services:
       interval: 10s
       timeout: 10s
       retries: 120
+      
+
 
 volumes:
   certs:
