--- a/docker/elastic/compose1/docker-compose.yml
+++ b/docker/elastic/compose1/docker-compose.yml
@@ -2,10 +2,11 @@ version: '3.8'
 
 services:
   setup:
+    networks:
+      hostnet: {}
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
     volumes:
-      - certs:/usr/share/elasticsearch/config/certs
-      - ./instances-cert.yml:/usr/share/elasticsearch/config/certs/instances.yml
+      - vol-certs:/usr/share/elasticsearch/config/certs
       - type: bind
         source: ./shared_folder
         target: /shared_folder
@@ -26,10 +27,31 @@ services:
         fi;
         if [ ! -f certs/certs.zip ]; then
           echo "Creating certs";
+          echo -ne \
+          "instances:\n"\
+          "  - name: es01\n"\
+          "    dns:\n"\
+          "      - es01\n"\
+          "      - localhost\n"\
+          "    ip:\n"\
+          "      - 127.0.0.1\n"\
+          "  - name: es02\n"\
+          "    dns:\n"\
+          "      - es02\n"\
+          "      - localhost\n"\
+          "    ip:\n"\
+          "      - 127.0.0.1\n"\
+          "  - name: es03\n"\
+          "    dns:\n"\
+          "      - es03\n"\
+          "      - localhost\n"\
+          "    ip:\n"\
+          "      - 127.0.0.1\n"\
+          > config/certs/instances.yml;
           bin/elasticsearch-certutil cert --silent --pem -out config/certs/certs.zip --in config/certs/instances.yml --ca-cert config/certs/ca/ca.crt --ca-key config/certs/ca/ca.key;
           unzip config/certs/certs.zip -d config/certs;
         fi;
-        cp config/certs/ca/ca.crt /shared_folder/ca3.crt
+        cp config/certs/ca/ca.crt /shared_folder/ca.crt
         echo "Setting file permissions"
         chown -R root:root config/certs;
         find . -type d -exec chmod 750 \{\} \;;
@@ -48,12 +70,14 @@ services:
       retries: 120
 
   es01:
+    networks:
+      hostnet: {}
     depends_on:
       setup:
         condition: service_healthy
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
     volumes:
-      - certs:/usr/share/elasticsearch/config/certs
+      - vol-certs:/usr/share/elasticsearch/config/certs
       - esdata01:/usr/share/elasticsearch/data
       
     ports:
@@ -93,11 +117,13 @@ services:
       retries: 120
 
   es02:
+    networks:
+      hostnet: {}
     depends_on:
       - es01
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
     volumes:
-      - certs:/usr/share/elasticsearch/config/certs
+      - vol-certs:/usr/share/elasticsearch/config/certs
       - esdata02:/usr/share/elasticsearch/data
     environment:
       - node.name=es02
@@ -133,11 +159,13 @@ services:
       retries: 120
 
   es03:
+    networks:
+      hostnet: {}
     depends_on:
       - es02
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
     volumes:
-      - certs:/usr/share/elasticsearch/config/certs
+      - vol-certs:/usr/share/elasticsearch/config/certs
       - esdata03:/usr/share/elasticsearch/data
     environment:
       - node.name=es03
@@ -173,6 +201,8 @@ services:
       retries: 120
 
   kibana:
+    networks:
+      hostnet: {}
     depends_on:
       es01:
         condition: service_healthy
@@ -182,7 +212,7 @@ services:
         condition: service_healthy
     image: docker.elastic.co/kibana/kibana:${STACK_VERSION}
     volumes:
-      - certs:/usr/share/kibana/config/certs
+      - vol-certs:/usr/share/kibana/config/certs
       - kibanadata:/usr/share/kibana/data
     ports:
       - ${KIBANA_PORT}:5601
@@ -202,12 +232,12 @@ services:
       interval: 10s
       timeout: 10s
       retries: 120
-      
+
 
 
 volumes:
-  certs:
-    driver: local
+  vol-certs:
+    external: true
   esdata01:
     driver: local
   esdata02:
@@ -216,3 +246,8 @@ volumes:
     driver: local
   kibanadata:
     driver: local
+
+networks:
+  hostnet:
+    external: true
+    name: mynets
